# lvgl_simulator

./: .aiignore  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md  lv_conf.h
LVGLQML/: CMakeLists.txt  main.cpp  main.h
LVGLQML/qml/: Main.qml
LVGLSDL3/: CMakeLists.txt  ReadMe.md  main.cpp  main.h
LVGLSDL3/LVGraphics/: LVGraphics.cpp  LVGraphics.h  仿射变换分解法.md  几何矢量法.md  旋转矩形单边固定缩放问题.md  旋转矩形单边固定缩放问题——核心逻辑.md
LVGLSDL3/MakeInstaller/: ReadMe.md
LVGLSDL3/demos/graphics/: README.md
LVGLSDL3/demos/graphics/docs/: llms.txt  代数标量法.md
LVGLSDL3/demos/graphics/v1/: GraphicsItem.cpp  GraphicsItem.h  GraphicsScene.cpp  GraphicsView.h  PropertyPanel.cpp  Transform.h  pch.h
LVGLSDL3/demos/graphics/v1/include/: Graphics.h
LVGLSDL3/demos/graphics/v1/src/: Gizmos.cpp  Gizmos.h  Graphics.cpp  GraphicsScene.h  GraphicsView.cpp  PropertyPanel.h
LVGLSDL3/demos/graphics/v2/include/: Graphics.h
LVGLSDL3/demos/graphics/v2/src/: Graphics.cpp  GraphicsGeom.h  GraphicsObjectItem.h  GraphicsPainter.cpp  GraphicsPainter.h
LVGLSDL3/demos/graphics/v3/include/: Graphics.h
LVGLSDL3/demos/graphics/v3/src/: Graphics.cpp  VectorCanvas.h
LVGLWidegt/: main.h
LVGLWidget/: CMakeLists.txt  main.cpp
