add_executable(LVGLSDL3
    main.cpp
    main.h
)

set_target_properties(LVGLSDL3 PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.LVGLSDL3
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_options(LVGLSDL3
    PRIVATE
    "$<$<CXX_COMPILER_ID:MSVC>:/ENTRY:mainCRTStartup>"
)

target_link_libraries(LVGLSDL3
    PRIVATE
    lvgl::lvgl
    SDL3::SDL3
)

include(GNUInstallDirs)
install(TARGETS LVGLSDL3
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
